# CrimeReporter

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  cache_migration.md  grab.bat  idea.txt  knife.csv  news.bat  pyproject.toml  run.bat
configuration/: config.yaml  landscape_crime.yaml  landscape_police.yaml  landscape_politics.yaml  landscape_teacher.yaml  landscape_wanted.yaml  phonemes.yaml
crimereporter/: __init__.py
crimereporter/ai/: ai_engine.py  ollama_engine.py  open_ai_engine.py
crimereporter/caches/: audio_cache.py  base_cache.py  cache.py  csv_cache.py  id_cache.py  media_cache.py  message_cache.py  metadata.py  playlist_cache.py  playlist_video_cache.py  text.py  thumbnail.py  title.py
crimereporter/db/: db.py
crimereporter/grabber/: article.py  cache.py  extractors.py  fetcher.py  people.py
crimereporter/grabber/commands/: article.py  atom.py  command.py  commit.py  index.py  (+3 more)
crimereporter/migrations/: env.py
crimereporter/models/: __init__.py  cache.py
crimereporter/news/: script.py  script_schema.py  timestamp.py
crimereporter/posters/: bluesky.py  facebook.py  poster.py  xtwitter.py
crimereporter/sources/: atom.py  avon_somerset.py  cps.py  crime_stoppers.py  dorset.py  file_directory.py  file_record.py  force.py  lancashire_police.py  met.py  met_misconduct.py  misconduct.py  nca.py  ncawanted.py  offenders.py  psni.py  source.py  type_a_police.py  west_yorkshire.py
crimereporter/utils/: ai_engine.py  align.py  audio.py  base.py  box.py  compose.py  config.py  counter.py  directories.py  format.py  image_combiner.py  image_draw.py  location.py  log_maintenance.py  loglevels.py  phoneme_replacer.py  position.py  scale_mode.py  singleton.py  templates.py  transform.py
crimereporter/youtube/: captions.py  client.py  commands.py  composed.py  metadata.py  playlist.py  thumbnail.py  upload_video.py
scripts/: cookies.py  download_playlist_id.py  download_playlist_video.py  download_title_id.py  generate_id_title.py  grab.py  launcher.py  news.py
templates/: ai.download.question  ai.text.question  entry_template.xml  index_template.html  news_story.html  post.bluesky.template  response.yaml  script.yaml  template.html  template.txt  template_index.html
(+119 files in other folders)
