[project]
name = "CrimeReporter"
version = "0.2.0"
description = "Crime reporting."
readme = "README.md"
license = "LicenseRef-Proprietary"
license-files = ["LICENSE.txt"]
authors = [
    { name = "Nick Leaton", email = "crimeandpolitics@gmail.com" }
]
requires-python = ">=3.13,<3.14"

dependencies = [
    "atproto>=0.0.64,<1",
    "audioop-lts>=0.2.2,<1",
    "beautifulsoup4>=4.14.3,<5",
    "browser_cookie3>=0.20.1,<1",
    "cairosvg>=2.8.2,<3",
    "gitpython>=3.1.45,<4",
    "google-api-python-client>=2.187.0,<3",
    "gtts>=2.5.4,<3",
    "jinja2>=3.1.6,<4",
    "moviepy>=2.2.1,<3",
    "newspaper3k>=0.2.8,<1",
    "ollama>=0.6.1,<1",
    "openai>=2.9.0,<3",
    "pillow>=11.3.0,<12", # Moviepy compatibility
    "playwright>=1.57.0,<2",
    "pydub>=0.25.1,<1",
    "pyperclip>=1.11.0,<2",
    "pyyaml>=6.0.3,<7",
    "trafilatura>=2.0.0,<3",
    "tweepy>=4.16.0,<5",
    "yt-dlp>=2025.12.8,<3000",
    "yt-upload>=0.2,<1",
    "tkinterdnd2>=0.4.1",
    "google-auth-oauthlib (>=1.2.3,<2.0.0)",
    "strictyaml (>=1.7.3,<2.0.0)",
    "webcolors (>=25.10.0,<26.0.0)",
    "google-cloud-texttospeech (>=2.33.0,<3.0.0)",
    "pyttsx3 (>=2.99,<3.0)",
    "gpt4all (>=2.8.2,<3.0.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "alembic (>=1.18.1,<2.0.0)"
]

[project.scripts]
crime-fetch = "scripts.cookies:main"
crime-report = "scripts.grab:main"
crime-upload = "scripts.launcher:main"
crime-summary = "scripts.news:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.optional-dependencies]

lint = [
    "flake8>=6.0.0",
    "flake8-absolute-import>=1.0",
    "flake8-docstrings>=1.7.0",
    "flake8-rst-docstrings>=0.3",
    "flake8-implicit-str-concat==0.4.0",
 ]

[tool.black]
line-length = 120
target-version = ['py313']  # adjust to your Python version
skip-string-normalization = false

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503", "D100", "D101", "D102", "D103", "D104", "D105", "D107"]   # ignore Black conflicts
# Optional: ignore missing docstrings if you don't want to write them
# ignore = ["D100", "D101", "D102", "D103"]